new update for my project

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
               <a class="nav__link" href="#Staff">Staff picks</a>
             </li>
             <li>
-              <a class="nav__link" href="#Events">Events</a>
+              <a class="nav__link" href="#events">Events</a>
             </li>
             <li>
-              <a class="nav__link" href="#Becomeamember">Become a member</a>
+              <a class="nav__link" href="#membership">Become a member</a>
             </li>
             <li>
-              <a class="nav__link" href="#About">About</a>
+              <a class="nav__link" href="#about">About</a>
             </li>
             <li>
-              <a class="nav__link" href="#Contacts">Contacts</a>
+              <a class="nav__link" href="#footer">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -51,7 +51,7 @@
           class="header__image"
         />
         <div class="header__footer">
-          <a class="header__link" href="#AbouttheLibrary">About the library &darr;</a>
+          <a class="header__link" href="#about">About the library &darr;</a>
           <p class="header__address">
             200 Success Avenue, The Town of Triple Peaks
           </p>
